// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolbar Component should render correctly when tenant select is open 1`] = `
<Toolbar
  className={null}
>
  <ToolbarGroup
    className={null}
  >
    <ToolbarItem
      className={null}
    >
      <Dropdown
        className=""
        direction="down"
        dropdownItems={
          Array [
            <Item
              className=""
              component="a"
              data-tenantid={1}
              href="#"
              isDisabled={false}
              isHovered={false}
            >
              Tenant 1
            </Item>,
            <Item
              className=""
              component="a"
              data-tenantid={2}
              href="#"
              isDisabled={false}
              isHovered={false}
            >
              Tenant 2
            </Item>,
          ]
        }
        isGrouped={false}
        isOpen={true}
        isPlain={true}
        onSelect={[Function]}
        position="right"
        toggle={
          <DropdownToggle
            className=""
            iconComponent={[Function]}
            id=""
            isActive={false}
            isFocused={false}
            isHovered={false}
            isOpen={false}
            isPlain={false}
            onToggle={[Function]}
            parentRef={null}
          >
            Tenant 2
          </DropdownToggle>
        }
      />
    </ToolbarItem>
  </ToolbarGroup>
  <ToolbarGroup
    className={null}
  >
    <ToolbarItem
      className={null}
    >
      <Button
        aria-label="Notifications actions"
        id="horizontal-example-uid-01"
        variant="plain"
      >
        <BellIcon
          color="currentColor"
          size="sm"
          title={null}
        />
      </Button>
    </ToolbarItem>
    <ToolbarItem
      className={null}
    >
      <Button
        aria-label="Settings actions"
        id="horizontal-example-uid-02"
        variant="plain"
      >
        <CogIcon
          color="currentColor"
          size="sm"
          title={null}
        />
      </Button>
    </ToolbarItem>
  </ToolbarGroup>
</Toolbar>
`;

exports[`Toolbar Component should render correctly with a few tenants 1`] = `
<Toolbar
  className={null}
>
  <ToolbarGroup
    className={null}
  >
    <ToolbarItem
      className={null}
    >
      <Dropdown
        className=""
        direction="down"
        dropdownItems={
          Array [
            <Item
              className=""
              component="a"
              data-tenantid={1}
              href="#"
              isDisabled={false}
              isHovered={false}
            >
              Tenant 1
            </Item>,
            <Item
              className=""
              component="a"
              data-tenantid={2}
              href="#"
              isDisabled={false}
              isHovered={false}
            >
              Tenant 2
            </Item>,
          ]
        }
        isGrouped={false}
        isOpen={false}
        isPlain={true}
        onSelect={[Function]}
        position="right"
        toggle={
          <DropdownToggle
            className=""
            iconComponent={[Function]}
            id=""
            isActive={false}
            isFocused={false}
            isHovered={false}
            isOpen={false}
            isPlain={false}
            onToggle={[Function]}
            parentRef={null}
          >
            Tenant 2
          </DropdownToggle>
        }
      />
    </ToolbarItem>
  </ToolbarGroup>
  <ToolbarGroup
    className={null}
  >
    <ToolbarItem
      className={null}
    >
      <Button
        aria-label="Notifications actions"
        id="horizontal-example-uid-01"
        variant="plain"
      >
        <BellIcon
          color="currentColor"
          size="sm"
          title={null}
        />
      </Button>
    </ToolbarItem>
    <ToolbarItem
      className={null}
    >
      <Button
        aria-label="Settings actions"
        id="horizontal-example-uid-02"
        variant="plain"
      >
        <CogIcon
          color="currentColor"
          size="sm"
          title={null}
        />
      </Button>
    </ToolbarItem>
  </ToolbarGroup>
</Toolbar>
`;

exports[`Toolbar Component should render correctly with no tenants 1`] = `
<Toolbar
  className={null}
>
  <ToolbarGroup
    className={null}
  />
  <ToolbarGroup
    className={null}
  >
    <ToolbarItem
      className={null}
    >
      <Button
        aria-label="Notifications actions"
        id="horizontal-example-uid-01"
        variant="plain"
      >
        <BellIcon
          color="currentColor"
          size="sm"
          title={null}
        />
      </Button>
    </ToolbarItem>
    <ToolbarItem
      className={null}
    >
      <Button
        aria-label="Settings actions"
        id="horizontal-example-uid-02"
        variant="plain"
      >
        <CogIcon
          color="currentColor"
          size="sm"
          title={null}
        />
      </Button>
    </ToolbarItem>
  </ToolbarGroup>
</Toolbar>
`;
